made in such a way that it was impossible to pass through the walls

--- a/Task-10_Browser_Game/Snake/src/scss/canvas.scss
+++ b/Task-10_Browser_Game/Snake/src/scss/canvas.scss
@@ -1,6 +1,6 @@
 canvas {
-    position: absolute;
-    margin: auto;
     background-color: rgb(255, 255, 255);
     border: 3px solid rgb(255, 0, 0);
+    display: block;
+    margin: 0 auto;
   }
